<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tablero"
    android:background="@drawable/fondo">

    <FrameLayout
        android:id="@+id/tablerito"
        android:layout_width="250dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214">

    </FrameLayout>

    <Button
        android:id="@+id/botonJugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:text="@string/botonJugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablerito" />

    <Button
        android:id="@+id/botonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="15dp"
        android:text="@string/botonReiniciar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablerito" />

    <FrameLayout
        android:id="@+id/proximoTetrominio"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toEndOf="@+id/tablerito"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <ImageButton
        android:id="@+id/botonGiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/botonGirar"
        app:layout_constraintStart_toEndOf="@+id/botonReset"
        app:layout_constraintTop_toBottomOf="@+id/tablerito"
        app:srcCompat="@drawable/flechagiro" />

    <ImageButton
        android:id="@+id/botonIzquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/botonIzquierda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonJugar"
        app:srcCompat="@drawable/flechaizquierda" />

    <ImageButton
        android:id="@+id/botonDerecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:contentDescription="@string/botonDerecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonJugar"
        app:srcCompat="@drawable/flechaderecha" />

    <ImageButton
        android:id="@+id/botonAbajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/botonAbajo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonGiro"
        app:srcCompat="@drawable/flechaabajo" />

</androidx.constraintlayout.widget.ConstraintLayout>