<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondo1">

    <Button
        android:id="@+id/primernivel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="150dp"
        android:background="@color/colorPrimary"
        android:onClick="iniciarModoNormal"
        android:text="@string/BotonPrimerNivel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/primernivel2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimary"
        android:text="@string/BotonSegundoNivel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primernivel" />

    <ImageView
        android:id="@+id/BotonHistoria"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:contentDescription="@string/BotonHistoria"
        app:layout_constraintEnd_toStartOf="@+id/BotonAudio"
        app:layout_constraintTop_toBottomOf="@+id/primernivel2"
        app:srcCompat="@drawable/historiatetris" />

    <ImageButton
        android:id="@+id/BotonAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@null"
        android:contentDescription="@string/BotonVolumen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primernivel2"
        app:srcCompat="@drawable/pausa" />

</androidx.constraintlayout.widget.ConstraintLayout>